Update MGR v0.9.5 (09/May/2013)

--- a/Gestures.ini
+++ b/Gestures.ini
@@ -1,59 +1,61 @@
-[Global]
-U      = Win_Last()        ; Last window
-#U     = Win_Maximize()    ; Maximize/Restore the window
-#UR    = Win_Close()       ; Close the window
-#U-D   = Win_AlwaysOnTop() ; AlwaysOnTop
-#L-D-R = Win_GetClass()    ; Get window's class
+[Master]
+R@9 | L@9	= Win_Move2NextMonitor() ; Win_Move2NextMonitor
+U@9      	= Win_Last()             ; Last window
+D@9      	= Win_Next()             ; Next window
+RB & LB@3	= Win_Close()            ; Close the window
+RB & WU@3	= Win_Maximize()         ; Win_Maximize
+RB & WD@3	= Win_Minimize()         ; Win_Minimize
 
-LB & RB = Msg("Global > LB & RB")
-RB & LB = Msg("Global > RB & LB")
-RB & WU = Msg("Global > RB & WU")
-;RB & WD = Label_Test
-RB & WD = Win_Last()        ; Last window
+[Default]
+U			= Win_Last()             ; Last window
+RB & WU		= {PGUP}                 ; Page Up
+RB & WD		= {PGDN}                 ; Page Down
+#R | #L		= Win_Move2NextMonitor() ; Win_Move2NextMonitor
+#UR    		= Win_Close()            ; Win_Close
+#U     		= Win_Maximize()         ; Win_Maximize
+#+R    		= Win_MoveRight()        ; Win_MoveRight
+#+L    		= Win_MoveLeft()         ; Win_MoveLeft
+#U-D   		= Win_AlwaysOnTop()      ; AlwaysOnTop
+#L-D-R 		= Win_GetClass()         ; Window's class
+#R-D-L 		= Win_GetProcess()       ; Window's process name
 
-R@3      = Win_Next()       ; Next window
-U@3      = Win_Maximize()   ; Maximize/Restore the window
-RB & LB@1 = Msg("Global > RB & LB - Rocker gesture @ Area 1")
-
-HShake   = Msg("Global > Horizontal Shake Gesture")
-VShake   = Msg("Global > Vertical Shake Gesture")
-DShake   = Msg("Global > Diagonal Shake Gesture")
-
-HShake@3 = Msg("Global > Horizontal Shake Gesture @ Area 3")
-#HShake@5 = Msg("Global > # + Horizontal Shake Gesture @ Area 5")
-#LB & RB@4 = Msg("Global > # + Rocker gesture @ Area 4")
-
-[notepad.exe]
-D = ^o ; Open
-
-[notepad.exe:#32770]
-D = {Enter} ; Enter
-
-[chrome.exe | firefox.exe | iexplore.exe]
-R     = {Browser_Forward} ; Forward
-L     = {Browser_Back}    ; Back
-UR    = ^t                ; New tab
-UL    = ^w                ; Close tab
-DL    = ^+{Tab}           ; Previous tab
-D     = {Browser_Refresh} ; Refresh
-DR    = ^{Tab}            ; Next tab
-DL-UL = ^+{Tab}^w         ; Close the previous tab
-
-LB & RB = {Browser_Forward} ; Forward
-RB & LB = {Browser_Back}    ; Back
-
+[CubicExplorer.exe | chrome.exe | firefox.exe | iexplore.exe]
+R    		= {Browser_Forward}		 ; Forward
+L    		= {Browser_Back}   		 ; Back
+UR   		= ^t               		 ; New tab
+UL   		= ^w               		 ; Close tab
+DL   		= ^+{Tab}          		 ; Previous tab
+D    		= {Browser_Refresh}		 ; Refresh
+DR   		= ^{Tab}           		 ; Next tab
+DL-UL		= ^+{Tab}^w        		 ; Close the previous tab
 
 [Explorer.EXE]
-R       = {Browser_Forward} ; Forward
-UR      = !{Enter}          ; Properties
-L       = {Browser_Back}    ; Back
-L-U     = !{Up}             ; Parent folder
-DL      = ^x                ; Cut
-D       = ^c                ; Copy
-DR      = ^v                ; Paste
-D-L     = {Enter}           ; Enter
-D-U     = {Ctrl Down}       ; Ctrl Down
-U-D     = {Ctrl Up}         ; Ctrl Up
+R  			= {Browser_Forward}		 ; Forward
+UR 			= !{Enter}         		 ; Properties
+L  			= {Browser_Back}   		 ; Back
+L-U			= !{Up}            		 ; Parent folder
+DL 			= ^x               		 ; Cut
+D  			= ^c               		 ; Copy
+DR 			= ^v               		 ; Paste
+D-L			= {Enter}          		 ; Enter
+D-U			= {Ctrl Down}      		 ; Ctrl Down
+U-D			= {Ctrl Up}        		 ; Ctrl Up
 
-LB & RB = {Browser_Forward} ; Forward
-RB & LB = {Browser_Back}    ; Back
+[SciTE.exe]
+DL 			= +{F6} 				 ; Previous tab
+D  			= {F5}  				 ; Run script
+DR 			= {F6}  				 ; Next tab
+UL 			= ^w    				 ; Close tab
+UR 			= ^n    				 ; New tab
+
+[sublime_text.exe]
+L  			= ^k^b    				 ; Left pane
+DL 			= ^{PGUP} 				 ; Previous tab
+DR 			= ^{PGDN} 				 ; Next tab
+D  			= ^b      				 ; Run script
+UL 			= ^w      				 ; Close tab
+UR 			= ^n      				 ; New tab
+
+[DllHost.exe]
+R 			= {Right} 				 ; Next picture
+L 			= {Left}  				 ; Previous picture
